<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_spacing"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/bg_small_radius_primary_dark"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:drawablePadding="@dimen/medium_spacing"
                android:padding="@dimen/medium_spacing"
                android:drawableTint="@color/colorDefaultIcon"
                android:hint="@string/search"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorDefaultIcon"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss"
                android:elevation="0dp"
                android:translationZ="0dp"
                android:background="@color/colorTransparent"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/large_spacing"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layoutNoResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:padding="@dimen/large_spacing">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclNotifications"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>