<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <View
        android:id="@+id/gradientView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/bg_gradient_login_header"
        android:layout_marginTop="-100dp"
        android:layout_marginLeft="-50dp"
        android:layout_marginRight="-50dp"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gradientView"
        android:layout_marginTop="-125dp"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gradientView"
        android:layout_marginTop="-40dp"
        android:src="@drawable/img_logo"/>

    <LinearLayout
        android:id="@+id/layoutLoginLabel"
        android:layout_width="@dimen/min_safe_width"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorDefaultIcon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="@dimen/medium_spacing"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/colorDefaultIcon"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/iBtnClose"
        android:layout_width="@dimen/standard_button_height"
        android:layout_height="@dimen/standard_button_height"
        android:background="?selectableItemBackgroundBorderless"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/large_spacing"
        android:src="@drawable/ic_close_black_24dp"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="@dimen/min_safe_width"
        android:layout_height="64dp"
        android:layout_below="@id/layoutLoginLabel"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebookCustom"
            android:layout_width="@dimen/min_safe_width"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_facebook"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/large_spacing"
            android:text="@string/login_with_facebook"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/general_icon_size"
            android:layout_height="@dimen/general_icon_size"
            android:src="@drawable/com_facebook_button_icon"
            android:tint="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/large_spacing"
            android:translationZ="10dp"/>

    </RelativeLayout>


</RelativeLayout>